syntax = "proto3";

option go_package = "./userservice;userservice";

package user;

service UserService {
    rpc CreateUser(User) returns (UserState) {}
    rpc GetUserList(Empty) returns (UserList) {}
    rpc GetUserByEmail(EmailFilter) returns (User) {}
}

message User {
    string Email = 1;
    string FullName = 2;
    bool IsAdmin = 3;
}

message UserList {
    repeated User list = 1;
}

message EmailFilter {
    string Email = 1;
}

message UserState {
    bool Success = 1;
}

message Empty {}